<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    android:id="@+id/activity_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/location_name" />

        <EditText
            android:id="@+id/locationName"
            android:hint="@string/input_location_name"
            android:inputType="text" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:gravity="end"
            android:text="@string/location_latitude" />

        <EditText
            android:id="@+id/locationLatitude"
            android:hint="@string/hint_location_latitude"
            android:inputType="numberDecimal" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:gravity="end"
            android:text="@string/location_longitude" />

        <EditText
            android:id="@+id/locationLongitude"
            android:hint="@string/hint_location_longitude"
            android:inputType="numberDecimal" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:gravity="end"
            android:text="Radius : " />

        <EditText
            android:id="@+id/radius"
            android:hint="radius"
            android:inputType="number" />

    </TableRow>

    <TableRow android:gravity="center_horizontal">

        <Button
            android:id="@+id/btn_get_location_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_location"
            android:textSize="20dp"
            android:textAllCaps="false"
            android:gravity="center_horizontal"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/btn_save_location_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_location"
            android:textSize="20dp"
            android:textAllCaps="false"
            android:gravity="center_horizontal"
            android:layout_marginBottom="20dp"/>

    </TableRow>

</TableLayout>
